몽골 작업시작

--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -54,3 +54,99 @@ d_paektu_guard;1¼P´ kÎÇ³;;;;;;;;;;;;;x
 d_paektu_guard_adj;kÎÇ³;;;;;;;;;;;;;x
 d_unitary;µÑ|ÇP­ŒÖ;;;;;;;;;;;;;x
 d_unitary_adj;µÑ|ÇP­;;;;;;;;;;;;;x
+d_kumchon;®œÌ;;;;;;;;;;;;;x
+d_kumchon_adj;®œÌ;;;;;;;;;;;;;x
+d_free_honam;Ç/Ç 8Ö¨°m­;;;;;;;;;;;;;x
+d_free_honam_adj;Ç/Ç8Ö¨°;;;;;;;;;;;;;x
+d_republic_haenam;tÕ¨° xÇü» õ¬TÖm­;;;;;;;;;;;;;x
+d_republic_haenam_adj;tÕ¨°õ¬TÖm­;;;;;;;;;;;;;x
+d_gumi;l­ø»;;;;;;;;;;;;;x
+d_gumi_adj;l­ø»;;;;;;;;;;;;;x
+d_mungyeong;8»Ì¬;;;;;;;;;;;;;x
+d_mungyeong_adj;8»Ì¬;;;;;;;;;;;;;x
+d_jinhae;ÄÉtÕ;;;;;;;;;;;;;x
+d_jinhae_adj;ÄÉtÕ;;;;;;;;;;;;;x
+d_cheongju;­ÌüÈ;;;;;;;;;;;;;x
+d_cheongju_adj;­ÌüÈ;;;;;;;;;;;;;x
+d_chungju;©ÍüÈ;;;;;;;;;;;;;x
+d_chungju_adj;©ÍüÈ;;;;;;;;;;;;;x
+d_19fw;19D¾‰Õè²;;;;;;;;;;;;;x
+d_19fw_adj;19D¾‰Õè²;;;;;;;;;;;;;x
+d_17fw;17D¾‰Õè²;;;;;;;;;;;;;x
+d_17fw_adj;17D¾‰Õè²;;;;;;;;;;;;;x
+d_gyeongju;Ì¬üÈ;;;;;;;;;;;;;x
+d_gyeongju_adj;Ì¬üÈ;;;;;;;;;;;;;x
+d_miryang;¼‘Å;;;;;;;;;;;;;x
+d_miryang_adj;¼‘Å;;;;;;;;;;;;;x
+d_tsushima;ğÄÜÂÈ¹;;;;;;;;;;;;;x
+d_tsushima_adj;ğÄÜÂÈ¹;;;;;;;;;;;;;x
+d_goryrong;à¬9¸;;;;;;;;;;;;;x
+d_goryrong_adj;à¬9¸;;;;;;;;;;;;;x
+d_gaya;¬|Å;;;;;;;;;;;;;x
+d_gaya_adj;¬|Å;;;;;;;;;;;;;x
+d_namwon;¨°ĞÆ;;;;;;;;;;;;;x
+d_namwon_adj;¨°ĞÆ;;;;;;;;;;;;;x
+d_gangjin;¬ÄÉ;;;;;;;;;;;;;x
+d_gangjin_adj;¬ÄÉ;;;;;;;;;;;;;x
+d_jindo;ÄÉÄ³;;;;;;;;;;;;;x
+d_jindo_adj;ÄÉÄ³;;;;;;;;;;;;;x
+d_geoje;p¬È;;;;;;;;;;;;;x
+d_geoje_adj;p¬È;;;;;;;;;;;;;x
+d_jeongeup;ÈMÇ;;;;;;;;;;;;;x
+d_jeongeup_adj;ÈMÇ;;;;;;;;;;;;;x
+d_samanguem;ÈÀÌ¹®;;;;;;;;;;;;;x
+d_samanguem_adj;ÈÀÌ¹®;;;;;;;;;;;;;x
+d_gunsan;p­°À;;;;;;;;;;;;;x
+d_gunsan_adj;p­°À;;;;;;;;;;;;;x
+d_muju;4»üÈ;;;;;;;;;;;;;x
+d_muju_adj;4»üÈ;;;;;;;;;;;;;x
+d_nonsan;|±°À;;;;;;;;;;;;;x
+d_nonsan_adj;|±°À;;;;;;;;;;;;;x
+d_daejeon;³È;;;;;;;;;;;;;x
+d_daejeon_adj;³È;;;;;;;;;;;;;x
+d_yeongdeok;ÆU³;;;;;;;;;;;;;x
+d_yeongdeok_adj;ÆU³;;;;;;;;;;;;;x
+d_boryeong;ô¼9¸;;;;;;;;;;;;;x
+d_boryeong_adj;ô¼9¸;;;;;;;;;;;;;x
+d_gongju;õ¬üÈ;;;;;;;;;;;;;x
+d_gongju_adj;õ¬üÈ;;;;;;;;;;;;;x
+d_seosan;Á°À;;;;;;;;;;;;;x
+d_seosan_adj;Á°À;;;;;;;;;;;;;x
+d_hongseong;MÖ1Á;;;;;;;;;;;;;x
+d_hongseong_adj;MÖ1Á;;;;;;;;;;;;;x
+d_donghae;Ù³tÕ;;;;;;;;;;;;;x
+d_donghae_adj;Ù³tÕ;;;;;;;;;;;;;x
+d_icheon;tÇœÌ;;;;;;;;;;;;;x
+d_icheon_adj;tÇœÌ;;;;;;;;;;;;;x
+d_gangneung;¬‰¹;;;;;;;;;;;;;x
+d_gangneung_adj;¬‰¹;;;;;;;;;;;;;x
+d_chuncheon;˜ÍœÌ;;;;;;;;;;;;;x
+d_chuncheon_adj;˜ÍœÌ;;;;;;;;;;;;;x
+d_east_wonju;Ù³ĞÆüÈ;;;;;;;;;;;;;x
+d_east_wonju_adj;Ù³ĞÆüÈ;;;;;;;;;;;;;x
+d_chuncheon;¨°˜ÍœÌ;;;;;;;;;;;;;x
+d_chuncheon_adj;¨°˜ÍœÌ;;;;;;;;;;;;;x
+d_west_wonju;ÁĞÆüÈ;;;;;;;;;;;;;x
+d_west_wonju_adj;ÁĞÆüÈ;;;;;;;;;;;;;x
+d_suwon;ÂĞÆ;;;;;;;;;;;;;x
+d_suwon_adj;ÂĞÆ;;;;;;;;;;;;;x
+d_ansan;HÅ°À;;;;;;;;;;;;;x
+d_ansan_adj;HÅ°À;;;;;;;;;;;;;x
+d_seongnam;1Á¨°;;;;;;;;;;;;;x
+d_seongnam_adj;1Á¨°;;;;;;;;;;;;;x
+d_namyangju;¨°‘ÅüÈ;;;;;;;;;;;;;x
+d_namyangju_adj;¨°‘ÅüÈ;;;;;;;;;;;;;x
+d_uijeongbu;XÇÈ´;;;;;;;;;;;;;x
+d_uijeongbu_adj;XÇÈ´;;;;;;;;;;;;;x
+d_kaesong;¬1Á;;;;;;;;;;;;;x
+d_kaesong_adj;¬1Á;;;;;;;;;;;;;x
+d_pocheon;ìÓœÌ;;;;;;;;;;;;;x
+d_pocheon_adj;ìÓœÌ;;;;;;;;;;;;;x
+d_ulleung;¸Æ‰¹;;;;;;;;;;;;;x
+d_ulleung_adj;¸Æ‰¹;;;;;;;;;;;;;x
+d_yantai;ÆÀĞtÇ;;;;;;;;;;;;;x
+d_yantai_adj;ÆÀĞtÇ;;;;;;;;;;;;;x
+d_weihai;èÆtÇXÕtÇ;;;;;;;;;;;;;x
+d_weihai_adj;èÆtÇXÕtÇ;;;;;;;;;;;;;x
+d_tsingdao;mÎä²3Æ;;;;;;;;;;;;;x
+d_tsingdao_adj;mÎä²3Æ;;;;;;;;;;;;;x
