--- a/Falen/localisation/kingdom_titles.csv
+++ b/Falen/localisation/kingdom_titles.csv
@@ -20,8 +20,8 @@ k_jeju;Jeju;;;;;;;;;;;;;x
 k_jeju_adj;Jeju;;;;;;;;;;;;;x
 k_primorsky;Primorsky;;;;;;;;;;;;;x
 k_primorsky_adj;Primoriye;;;;;;;;;;;;;x
-k_inner_mongolia;Mongolia;;;;;;;;;;;;;x
-k_inner_mongolia_adj;Mongol;;;;;;;;;;;;;x
+k_mongolia;Mongolia;;;;;;;;;;;;;x
+k_mongolia_adj;Mongol;;;;;;;;;;;;;x
 k_mil_seoul;Authorian Seoul;;;;;;;;;;;;;x
 k_mil_seoul_adj;Seoul;;;;;;;;;;;;;x
 k_civil_seoul;Civilian Seoul;;;;;;;;;;;;;x
