--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -522,4 +522,45 @@ PROV564;Nakdong;;;;;;;;;;;;;x
 PROV565;Nakdong;;;;;;;;;;;;;x
 PROV566;Nakdong;;;;;;;;;;;;;x
 PROV567;Nakdong;;;;;;;;;;;;;x
+PROV568;Yalu;;;;;;;;;;;;;x
+PROV569;Yalu;;;;;;;;;;;;;x
+PROV570;Yalu;;;;;;;;;;;;;x
+PROV571;Yalu;;;;;;;;;;;;;x
+PROV572;Yalu;;;;;;;;;;;;;x
+PROV573;Yalu;;;;;;;;;;;;;x
+PROV574;Yalu;;;;;;;;;;;;;x
+PROV575;Taedong;;;;;;;;;;;;;x
+PROV576;Taedong;;;;;;;;;;;;;x
+PROV577;Taedong;;;;;;;;;;;;;x
+PROV578;Han;;;;;;;;;;;;;x
+PROV579;Han;;;;;;;;;;;;;x
+PROV580;Han;;;;;;;;;;;;;x
+PROV581;Han;;;;;;;;;;;;;x
+PROV582;Han;;;;;;;;;;;;;x
+PROV583;Han;;;;;;;;;;;;;x
+PROV584;Han;;;;;;;;;;;;;x
+PROV585;Imjin;;;;;;;;;;;;;x
+PROV586;Imjin;;;;;;;;;;;;;x
+PROV587;Huangdao;;;;;;;;;;;;;x
+PROV588;Gaomi;;;;;;;;;;;;;x
+PROV589;Laizhou;;;;;;;;;;;;;x
+PROV590;Jiaozhou;;;;;;;;;;;;;x
+PROV591;Jianping;;;;;;;;;;;;;x
+PROV592;Liaozhong;;;;;;;;;;;;;x
+PROV593;Nanpiao;;;;;;;;;;;;;x
+PROV594;Gongchongling;;;;;;;;;;;;;x
+PROV595;Dandong;;;;;;;;;;;;;x
+PROV596;Changshan;;;;;;;;;;;;;x
 PROV597;Chonji;;;;;;;;;;;;;x
+PROV598;Geum;;;;;;;;;;;;;x
+PROV599;Geum;;;;;;;;;;;;;x
+PROV600;Geum;;;;;;;;;;;;;x
+PROV601;Geum;;;;;;;;;;;;;x
+PROV602;Liao;;;;;;;;;;;;;x
+PROV603;Liao;;;;;;;;;;;;;x
+PROV604;Liao;;;;;;;;;;;;;x
+PROV605;Liao;;;;;;;;;;;;;x
+PROV606;Liao;;;;;;;;;;;;;x
+PROV607;Hun;;;;;;;;;;;;;x
+PROV608;Tumen;;;;;;;;;;;;;x
+PROV608;Tumen;;;;;;;;;;;;;x
