--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -408,41 +408,41 @@ PROV407;Dashiqiao;;;;;;;;;;;;;x
 PROV408;Xishi;;;;;;;;;;;;;x
 PROV409;Siuyan;;;;;;;;;;;;;x
 PROV410;Haicheng;;;;;;;;;;;;;x
-PROV411;Qianshan;;;;;;;;;;;;;x
+PROV411;Qiansk’¨;;;;;;;;;;;;;x
 PROV412;Tai'an;;;;;;;;;;;;;x
 PROV413;Dawa;;;;;;;;;;;;;x
-PROV414;Panshan;;;;;;;;;;;;;x
-PROV415;Liaoyang;;;;;;;;;;;;;x
+PROV414;Pansk’¨;;;;;;;;;;;;;x
+PROV415;î∆X’yang;;;;;;;;;;;;;x
 PROV416;Dengta;;;;;;;;;;;;;x
 PROV417;Benxi;;;;;;;;;;;;;x
 PROV418;Huanren;;;;;;;;;;;;;x
-PROV419;Pingshan;;;;;;;;;;;;;x
-PROV420;Fushun;;;;;;;;;;;;;x
+PROV419;Pingsk’¨;;;;;;;;;;;;;x
+PROV420;Fus<÷X’;;;;;;;;;;;;;x
 PROV421;Xinbin;;;;;;;;;;;;;x
 PROV422;Cingyuwan;;;;;;;;;;;;;x
-PROV423;Changtu;;;;;;;;;;;;;x
+PROV423;Ck’¨gtu;;;;;;;;;;;;;x
 PROV424;Xifeng;;;;;;;;;;;;;x
 PROV425;Kaiyuan;;;;;;;;;;;;;x
-PROV426;Liaozhong;;;;;;;;;;;;;x
+PROV426;î∆X’zhong;;;;;;;;;;;;;x
 PROV427;Sujiatu;;;;;;;;;;;;;x
 PROV428;Faku;;;;;;;;;;;;;x
 PROV429;Kangping;;;;;;;;;;;;;x
 PROV430;Xinmin;;;;;;;;;;;;;x
-PROV431;Heishan;;;;;;;;;;;;;x
+PROV431;Heisk’¨;;;;;;;;;;;;;x
 PROV432;Beizhen;;;;;;;;;;;;;x
 PROV433;Yi;;;;;;;;;;;;;x
 PROV434;Taihe;;;;;;;;;;;;;x
 PROV435;Linghai;;;;;;;;;;;;;x
 PROV436;Fuxin;;;;;;;;;;;;;x
-PROV437;Zhangwu;;;;;;;;;;;;;x
-PROV438;Lianshan;;;;;;;;;;;;;x
+PROV437;Zk’¨gwu;;;;;;;;;;;;;x
+PROV438;Liansk’¨;;;;;;;;;;;;;x
 PROV439;Suizhong;;;;;;;;;;;;;x
-PROV440;Jianchang;;;;;;;;;;;;;x
+PROV440;Jianck’¨g;;;;;;;;;;;;;x
 PROV441;Beipiao;;;;;;;;;;;;;x
 PROV442;Chaoyang;;;;;;;;;;;;;x
 PROV443;Lingyuan;;;;;;;;;;;;;x
 PROV444;Tieling;;;;;;;;;;;;;x
-PROV445;Hunchun;;;;;;;;;;;;;x
+PROV445;<÷X’c<÷X’;;;;;;;;;;;;;x
 PROV446;ƒ≥8ª;;;;;;;;;;;;;x
 PROV447;»≥T÷;;;;;;;;;;;;;x
 PROV448;T÷9∏;;;;;;;;;;;;;x
@@ -451,7 +451,7 @@ PROV450;©∆»;;;;;;;;;;;;;x
 PROV451;≈8Æ;;;;;;;;;;;;;x
 PROV452;Wangqing;;;;;;;;;;;;;x
 PROV453;•«1º;;;;;;;;;;;;;x
-PROV454;Hunjiang;;;;;;;;;;;;;x
+PROV454;<÷X’jiang;;;;;;;;;;;;;x
 PROV455;Jiangyuan;;;;;;;;;;;;;x
 PROV456;Linjiang;;;;;;;;;;;;;x
 PROV457;Fusong;;;;;;;;;;;;;x
@@ -461,30 +461,30 @@ PROV460;Tonghua;;;;;;;;;;;;;x
 PROV461;Meihekou;;;;;;;;;;;;;x
 PROV462;Huinan;;;;;;;;;;;;;x
 PROV463;Dongfenf;;;;;;;;;;;;;x
-PROV464;Dongliao;;;;;;;;;;;;;x
+PROV464;Dongî∆X’;;;;;;;;;;;;;x
 PROV465;Panshi;;;;;;;;;;;;;x
 PROV466;Huadian;;;;;;;;;;;;;x
 PROV467;Yongju;;;;;;;;;;;;;x
 PROV468;8Æºπ;;;;;;;;;;;;;x
 PROV469;Jiaohe;;;;;;;;;;;;;x
 PROV470;Shuang'yang;;;;;;;;;;;;;x
-PROV471;Changchun;;;;;;;;;;;;;x
+PROV471;Ck’¨gc<÷X’;;;;;;;;;;;;;x
 PROV472;Jiutai;;;;;;;;;;;;;x
 PROV473;Nong'an;;;;;;;;;;;;;x
 PROV474;Dehui;;;;;;;;;;;;;x
 PROV475;Yitong;;;;;;;;;;;;;x
 PROV476;Lishu;;;;;;;;;;;;;x
 PROV477;Gongzhuling;;;;;;;;;;;;;x
-PROV478;Shuangliao;;;;;;;;;;;;;x
-PROV479;Changling;;;;;;;;;;;;;x
+PROV478;Shuangî∆X’;;;;;;;;;;;;;x
+PROV479;Ck’¨gling;;;;;;;;;;;;;x
 PROV480;ò∞t«Ãπ;;;;;;;;;;;;;x
 PROV481;ƒ÷∏;;;;;;;;;;;;;x
-PROV482;Tongliao;;;;;;;;;;;;;x
+PROV482;Tongî∆X’;;;;;;;;;;;;;x
 PROV483;Kailu;;;;;;;;;;;;;x
 PROV484;8÷tπkŒ;;;;;;;;;;;;;x
 PROV485;Å¥8÷tπkŒ;;;;;;;;;;;;;x
 PROV486;®∞8÷tπkŒ;;;;;;;;;;;;;x
-PROV487;Aohan;;;;;;;;;;;;;x
+PROV487;Aok’¨;;;;;;;;;;;;;x
 PROV488;Ongnyud;;;;;;;;;;;;;x
 PROV489;Baarin;;;;;;;;;;;;;x
 PROV490;Dongning;;;;;;;;;;;;;x
@@ -493,16 +493,16 @@ PROV492;Ning'an;;;;;;;;;;;;;x
 PROV493;Rongcheng;;;;;;;;;;;;;x
 PROV494;Huancui;;;;;;;;;;;;;x
 PROV495;Wendeng;;;;;;;;;;;;;x
-PROV496;Rushan;;;;;;;;;;;;;x
+PROV496;Rusk’¨;;;;;;;;;;;;;x
 PROV497;Muping;;;;;;;;;;;;;x
-PROV498;Fushan;;;;;;;;;;;;;x
+PROV498;Fusk’¨;;;;;;;;;;;;;x
 PROV499;Laiyang;;;;;;;;;;;;;x
 PROV500;Haiyang;;;;;;;;;;;;;x
 PROV501;Qixia;;;;;;;;;;;;;x
 PROV502;Penglai;;;;;;;;;;;;;x
 PROV503;Longkou;;;;;;;;;;;;;x
 PROV504;Zhaoyuan;;;;;;;;;;;;;x
-PROV505;Laoshan;;;;;;;;;;;;;x
+PROV505;Laosk’¨;;;;;;;;;;;;;x
 PROV506;Chengyang;;;;;;;;;;;;;x
 PROV507;mŒ‰≤3∆;;;;;;;;;;;;;x
 PROV508;Jiaozhou;;;;;;;;;;;;;x
@@ -522,4 +522,45 @@ PROV564;ô∞Ÿ≥¨;;;;;;;;;;;;;x
 PROV565;ô∞Ÿ≥¨;;;;;;;;;;;;;x
 PROV566;ô∞Ÿ≥¨;;;;;;;;;;;;;x
 PROV567;ô∞Ÿ≥¨;;;;;;;;;;;;;x
+PROV568;U≈]∏;;;;;;;;;;;;;x
+PROV569;U≈]∏;;;;;;;;;;;;;x
+PROV570;U≈]∏;;;;;;;;;;;;;x
+PROV571;U≈]∏;;;;;;;;;;;;;x
+PROV572;U≈]∏;;;;;;;;;;;;;x
+PROV573;U≈]∏;;;;;;;;;;;;;x
+PROV574;U≈]∏;;;;;;;;;;;;;x
+PROV575;≥Ÿ≥;;;;;;;;;;;;;x
+PROV576;≥Ÿ≥;;;;;;;;;;;;;x
+PROV577;≥Ÿ≥;;;;;;;;;;;;;x
+PROV578;k’¨;;;;;;;;;;;;;x
+PROV579;k’¨;;;;;;;;;;;;;x
+PROV580;k’¨;;;;;;;;;;;;;x
+PROV581;k’¨;;;;;;;;;;;;;x
+PROV582;k’¨;;;;;;;;;;;;;x
+PROV583;k’¨;;;;;;;;;;;;;x
+PROV584;k’¨;;;;;;;;;;;;;x
+PROV585;Ñ«ƒ…¨;;;;;;;;;;;;;x
+PROV586;Ñ«ƒ…¨;;;;;;;;;;;;;x
+PROV587;i÷‰≤3∆;;;;;;;;;;;;;x
+PROV588;¨3∆¯ª;;;;;;;;;;;;;x
+PROV589;|∑t«»∞∆;;;;;;;;;;;;;x
+PROV590;ê«3∆»∞∆;;;;;;;;;;;;;x
+PROV591;/»Q’;;;;;;;;;;;;;x
+PROV592;¥∑3∆…;;;;;;;;;;;;;x
+PROV593;ú∞D”3∆;;;;;;;;;;;;;x
+PROV594;Å≠©Õ¡π;;;;;;;;;;;;;x
+PROV595;Ë≤e¥;;;;;;;;;;;;;x
+PROV596;=Ã∞¿;;;;;;;;;;;;;x
 PROV597;úÃ¿…;;;;;;;;;;;;;x
+PROV598;Æ¨;;;;;;;;;;;;;x
+PROV599;Æ¨;;;;;;;;;;;;;x
+PROV600;Æ¨;;;;;;;;;;;;;x
+PROV601;Æ¨;;;;;;;;;;;;;x
+PROV602;î∆X’;;;;;;;;;;;;;x
+PROV603;î∆X’;;;;;;;;;;;;;x
+PROV604;î∆X’;;;;;;;;;;;;;x
+PROV605;î∆X’;;;;;;;;;;;;;x
+PROV606;î∆X’;;;;;;;;;;;;;x
+PROV607;<÷X’;;;;;;;;;;;;;x
+PROV608;P¥Ãπ;;;;;;;;;;;;;x
+PROV608;P¥Ãπ;;;;;;;;;;;;;x
