--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -401,114 +401,114 @@ PROV400;x‘è∑¨≥;;;;;;;;;;;;;x
 PROV401;O∆!”¨≥;;;;;;;;;;;;;x
 PROV402;°»»’;;;;;;;;;;;;;x
 PROV403;e¥¨;;;;;;;;;;;;;x
-PROV404;Fengcheng;;;;;;;;;;;;;x
-PROV405;Kuandian;;;;;;;;;;;;;x
-PROV406;Gaizhou;;;;;;;;;;;;;x
-PROV407;Dashiqiao;;;;;;;;;;;;;x
-PROV408;Xishi;;;;;;;;;;;;;x
-PROV409;Siuyan;;;;;;;;;;;;;x
-PROV410;Haicheng;;;;;;;;;;;;;x
-PROV411;Qiansk’¨;;;;;;;;;;;;;x
-PROV412;Tai'an;;;;;;;;;;;;;x
-PROV413;Dawa;;;;;;;;;;;;;x
-PROV414;Pansk’¨;;;;;;;;;;;;;x
-PROV415;î∆X’yang;;;;;;;;;;;;;x
-PROV416;Dengta;;;;;;;;;;;;;x
-PROV417;Benxi;;;;;;;;;;;;;x
-PROV418;Huanren;;;;;;;;;;;;;x
-PROV419;Pingsk’¨;;;;;;;;;;;;;x
-PROV420;Fus<÷X’;;;;;;;;;;;;;x
-PROV421;Xinbin;;;;;;;;;;;;;x
-PROV422;Cingyuwan;;;;;;;;;;;;;x
-PROV423;Ck’¨gtu;;;;;;;;;;;;;x
-PROV424;Xifeng;;;;;;;;;;;;;x
-PROV425;Kaiyuan;;;;;;;;;;;;;x
-PROV426;î∆X’zhong;;;;;;;;;;;;;x
-PROV427;Sujiatu;;;;;;;;;;;;;x
-PROV428;Faku;;;;;;;;;;;;;x
-PROV429;Kangping;;;;;;;;;;;;;x
-PROV430;Xinmin;;;;;;;;;;;;;x
-PROV431;Heisk’¨;;;;;;;;;;;;;x
-PROV432;Beizhen;;;;;;;;;;;;;x
-PROV433;Yi;;;;;;;;;;;;;x
-PROV434;Taihe;;;;;;;;;;;;;x
-PROV435;Linghai;;;;;;;;;;;;;x
-PROV436;Fuxin;;;;;;;;;;;;;x
-PROV437;Zk’¨gwu;;;;;;;;;;;;;x
-PROV438;Liansk’¨;;;;;;;;;;;;;x
-PROV439;Suizhong;;;;;;;;;;;;;x
-PROV440;Jianck’¨g;;;;;;;;;;;;;x
-PROV441;Beipiao;;;;;;;;;;;;;x
-PROV442;Chaoyang;;;;;;;;;;;;;x
-PROV443;Lingyuan;;;;;;;;;;;;;x
-PROV444;Tieling;;;;;;;;;;;;;x
-PROV445;<÷X’c<÷X’;;;;;;;;;;;;;x
+PROV404;ë”≠Ã;;;;;;;;;;;;;x
+PROV405;tœ¨≥;;;;;;;;;;;;;x
+PROV406;¨t«»∞∆;;;;;;;;;;;;;x
+PROV407;‰≤≥¬(Ã3∆;;;;;;;;;;;;;x
+PROV408;‹¬≥¬;;;;;;;;;;;;;x
+PROV409;à¬∆;;;;;;;;;;;;;x
+PROV410;X’t«≠Ã;;;;;;;;;;;;;x
+PROV411;∏Ã∞¿;;;;;;;;;;;;;x
+PROV412;¿–t«H≈;;;;;;;;;;;;;x
+PROV413;‰≤O∆;;;;;;;;;;;;;x
+PROV414;”∞¿;;;;;;;;;;;;;x
+PROV415;î∆ë≈;;;;;;;;;;;;;x
+PROV416;i≥¿–;;;;;;;;;;;;;x
+PROV417;àº‹¬;;;;;;;;;;;;;x
+PROV418;X÷∑;;;;;;;;;;;;;x
+PROV419;Q’∞¿;;;;;;;;;;;;;x
+PROV420;x‘¬;;;;;;;;;;;;;x
+PROV421;‡¬Hæ;;;;;;;;;;;;;x
+PROV422;mŒ«D∆;;;;;;;;;;;;;x
+PROV423;=Ã,“;;;;;;;;;;;;;x
+PROV424;‹¬ë”;;;;;;;;;;;;;x
+PROV425;tŒt««H≈;;;;;;;;;;;;;x
+PROV426;î∆…;;;;;;;;;;;;;x
+PROV427;¬ê«,“;;;;;;;;;;;;;x
+PROV428;”‡œ;;;;;;;;;;;;;x
+PROV429;âŒQ’;;;;;;;;;;;;;x
+PROV430;‡¬¸ª;;;;;;;;;;;;;x
+PROV431;»’t«∞¿;;;;;;;;;;;;;x
+PROV432;†ºt«»;;;;;;;;;;;;;x
+PROV433;t«;;;;;;;;;;;;;x
+PROV434;¿–t«»’;;;;;;;;;;;;;x
+PROV435;¡πX’t«;;;;;;;;;;;;;x
+PROV436;x‘‡¬;;;;;;;;;;;;;x
+PROV437;•«∞∆;;;;;;;;;;;;;x
+PROV438;D∏∞¿;;;;;;;;;;;;;x
+PROV439;¬t«…;;;;;;;;;;;;;x
+PROV440;/»=Ã;;;;;;;;;;;;;x
+PROV441;†ºt«D”3∆;;;;;;;;;;;;;x
+PROV442;(Ã3∆ë≈;;;;;;;;;;;;;x
+PROV443;¡π«H≈;;;;;;;;;;;;;x
+PROV444;“–≈¡π;;;;;;;;;;;;;x
+PROV445;»÷òÕ;;;;;;;;;;;;;x
 PROV446;ƒ≥8ª;;;;;;;;;;;;;x
 PROV447;»≥T÷;;;;;;;;;;;;;x
 PROV448;T÷9∏;;;;;;;;;;;;;x
 PROV449;H≈ƒ≥;;;;;;;;;;;;;x
 PROV450;©∆»;;;;;;;;;;;;;x
 PROV451;≈8Æ;;;;;;;;;;;;;x
-PROV452;Wangqing;;;;;;;;;;;;;x
+PROV452;U∆mŒ;;;;;;;;;;;;;x
 PROV453;•«1º;;;;;;;;;;;;;x
-PROV454;<÷X’jiang;;;;;;;;;;;;;x
-PROV455;Jiangyuan;;;;;;;;;;;;;x
-PROV456;Linjiang;;;;;;;;;;;;;x
-PROV457;Fusong;;;;;;;;;;;;;x
-PROV458;Jingyu;;;;;;;;;;;;;x
-PROV459;Ji'an;;;;;;;;;;;;;x
-PROV460;Tonghua;;;;;;;;;;;;;x
-PROV461;Meihekou;;;;;;;;;;;;;x
-PROV462;Huinan;;;;;;;;;;;;;x
-PROV463;Dongfenf;;;;;;;;;;;;;x
-PROV464;Dongî∆X’;;;;;;;;;;;;;x
-PROV465;Panshi;;;;;;;;;;;;;x
-PROV466;Huadian;;;;;;;;;;;;;x
-PROV467;Yongju;;;;;;;;;;;;;x
+PROV454;»÷•«;;;;;;;;;;;;;x
+PROV455;•««H≈;;;;;;;;;;;;;x
+PROV456;∞π•«;;;;;;;;;;;;;x
+PROV457;x‘-¬;;;;;;;;;;;;;x
+PROV458;’…«;;;;;;;;;;;;;x
+PROV459;¿…H≈;;;;;;;;;;;;;x
+PROV460;A“T÷;;;;;;;;;;;;;x
+PROV461;T∫t«»’‰Œ∞∆;;;;;;;;;;;;;x
+PROV462;ƒ÷t«ú∞;;;;;;;;;;;;;x
+PROV463;e¥ë”;;;;;;;;;;;;;x
+PROV464;e¥¥∑3∆;;;;;;;;;;;;;x
+PROV465;”≥¬;;;;;;;;;;;;;x
+PROV466;T÷¨≥;;;;;;;;;;;;;x
+PROV467;©∆¸»;;;;;;;;;;;;;x
 PROV468;8Æºπ;;;;;;;;;;;;;x
-PROV469;Jiaohe;;;;;;;;;;;;;x
-PROV470;Shuang'yang;;;;;;;;;;;;;x
-PROV471;Ck’¨gc<÷X’;;;;;;;;;;;;;x
-PROV472;Jiutai;;;;;;;;;;;;;x
-PROV473;Nong'an;;;;;;;;;;;;;x
-PROV474;Dehui;;;;;;;;;;;;;x
-PROV475;Yitong;;;;;;;;;;;;;x
-PROV476;Lishu;;;;;;;;;;;;;x
-PROV477;Gongzhuling;;;;;;;;;;;;;x
-PROV478;Shuangî∆X’;;;;;;;;;;;;;x
-PROV479;Ck’¨gling;;;;;;;;;;;;;x
+PROV469;ê«3∆»’;;;;;;;;;;;;;x
+PROV470;Ã¡ë≈;;;;;;;;;;;;;x
+PROV471;=ÃòÕ;;;;;;;;;;;;;x
+PROV472;¸»¿–t«;;;;;;;;;;;;;x
+PROV473;≤H≈;;;;;;;;;;;;;x
+PROV474;T≥ƒ÷t«;;;;;;;;;;;;;x
+PROV475;t«A“;;;;;;;;;;;;;x
+PROV476;¨π¬;;;;;;;;;;;;;x
+PROV477;Å≠¸»¡π;;;;;;;;;;;;;x
+PROV478;Ã¡¥∑3∆;;;;;;;;;;;;;x
+PROV479;=Ã¡π;;;;;;;;;;;;;x
 PROV480;ò∞t«Ãπ;;;;;;;;;;;;;x
 PROV481;ƒ÷∏;;;;;;;;;;;;;x
-PROV482;Tongî∆X’;;;;;;;;;;;;;x
-PROV483;Kailu;;;;;;;;;;;;;x
+PROV482;A“¥∑3∆;;;;;;;;;;;;;x
+PROV483;tŒt«Ë∏;;;;;;;;;;;;;x
 PROV484;8÷tπkŒ;;;;;;;;;;;;;x
 PROV485;Å¥8÷tπkŒ;;;;;;;;;;;;;x
 PROV486;®∞8÷tπkŒ;;;;;;;;;;;;;x
-PROV487;Aok’¨;;;;;;;;;;;;;x
-PROV488;Ongnyud;;;;;;;;;;;;;x
-PROV489;Baarin;;;;;;;;;;;;;x
-PROV490;Dongning;;;;;;;;;;;;;x
-PROV491;Muling;;;;;;;;;;;;;x
-PROV492;Ning'an;;;;;;;;;;;;;x
-PROV493;Rongcheng;;;;;;;;;;;;;x
-PROV494;Huancui;;;;;;;;;;;;;x
-PROV495;Wendeng;;;;;;;;;;;;;x
-PROV496;Rusk’¨;;;;;;;;;;;;;x
-PROV497;Muping;;;;;;;;;;;;;x
-PROV498;Fusk’¨;;;;;;;;;;;;;x
-PROV499;Laiyang;;;;;;;;;;;;;x
-PROV500;Haiyang;;;;;;;;;;;;;x
-PROV501;Qixia;;;;;;;;;;;;;x
-PROV502;Penglai;;;;;;;;;;;;;x
-PROV503;Longkou;;;;;;;;;;;;;x
-PROV504;Zhaoyuan;;;;;;;;;;;;;x
-PROV505;Laosk’¨;;;;;;;;;;;;;x
-PROV506;Chengyang;;;;;;;;;;;;;x
+PROV487;D≈3∆k’;;;;;;;;;;;;;x
+PROV488;9∆t≤‹¥;;;;;;;;;;;;;x
+PROV489;º∞π;;;;;;;;;;;;;x
+PROV490;e¥›≤;;;;;;;;;;;;;x
+PROV491;4ª¡π;;;;;;;;;;;;;x
+PROV492;›≤H≈;;;;;;;;;;;;;x
+PROV493;˝∏≠Ã;;;;;;;;;;;;;x
+PROV494;X÷îÕt«;;;;;;;;;;;;;x
+PROV495;–∆i≥;;;;;;;;;;;;;x
+PROV496;Ë∏∞¿;;;;;;;;;;;;;x
+PROV497;4ªQ’;;;;;;;;;;;;;x
+PROV498;x‘∞¿;;;;;;;;;;;;;x
+PROV499;|∑t«ë≈;;;;;;;;;;;;;x
+PROV500;X’t«ë≈;;;;;;;;;;;;;x
+PROV501;XŒ‹¬D≈;;;;;;;;;;;;;x
+PROV502;ë”|∑t«;;;;;;;;;;;;;x
+PROV503;˝∏‰Œ∞∆;;;;;;;;;;;;;x
+PROV504;ê«3∆«H≈;;;;;;;;;;;;;x
+PROV505;|∑3∆∞¿;;;;;;;;;;;;;x
+PROV506;≠Ãë≈;;;;;;;;;;;;;x
 PROV507;mŒ‰≤3∆;;;;;;;;;;;;;x
-PROV508;Jiaozhou;;;;;;;;;;;;;x
-PROV509;Jimo;;;;;;;;;;;;;x
-PROV510;Pingdu;;;;;;;;;;;;;x
-PROV511;Laixi;;;;;;;;;;;;;x
+PROV508;ê«3∆»∞∆;;;;;;;;;;;;;x
+PROV509;¿…®∫;;;;;;;;;;;;;x
+PROV510;Q’P¥;;;;;;;;;;;;;x
+PROV511;|∑t«‹¬;;;;;;;;;;;;;x
 PROV512;ƒ‹¬»π;;;;;;;;;;;;;x
 PROV513;Ò¬≠Ã;;;;;;;;;;;;;x
 PROV514;/¡ë≈;;;;;;;;;;;;;x
