러시아쪽 약간 수정

--- a/Falen/localisation/duchy_titles.csv
+++ b/Falen/localisation/duchy_titles.csv
@@ -54,3 +54,101 @@ d_paektu_guard;Paektu Guard;;;;;;;;;;;;;x
 d_paektu_guard_adj;Paektu Guard;;;;;;;;;;;;;x
 d_unitary;The Unitary Church;;;;;;;;;;;;;x
 d_unitary_adj;Unitary;;;;;;;;;;;;;x
+d_kumchon;Kumchon;;;;;;;;;;;;;x
+d_kumchon_adj;Kumchon;;;;;;;;;;;;;x
+d_free_honam;Free Honam;;;;;;;;;;;;;x
+d_free_honam_adj;Free Honam;;;;;;;;;;;;;x
+d_republic_haenam;Haenam Republic;;;;;;;;;;;;;x
+d_republic_haenam_adj;Haenam;;;;;;;;;;;;;x
+d_gumi;Gumi;;;;;;;;;;;;;x
+d_gumi_adj;Gumi;;;;;;;;;;;;;x
+d_mungyeong;Mungyeong;;;;;;;;;;;;;x
+d_mungyeong_adj;Mungyeong;;;;;;;;;;;;;x
+d_jinhae;Jinhae;;;;;;;;;;;;;x
+d_jinhae_adj;Jinhae;;;;;;;;;;;;;x
+d_cheongju;Cheongju;;;;;;;;;;;;;x
+d_cheongju_adj;Cheongju;;;;;;;;;;;;;x
+d_chungju;Chungju;;;;;;;;;;;;;x
+d_chungju_adj;Chungju;;;;;;;;;;;;;x
+d_19fw;Wing 19;;;;;;;;;;;;;x
+d_19fw_adj;Air;;;;;;;;;;;;;x
+d_17fw;Wing 17;;;;;;;;;;;;;x
+d_17fw_adj;Air;;;;;;;;;;;;;x
+d_gyeongju;Gyeongju;;;;;;;;;;;;;x
+d_gyeongju_adj;Gyeongju;;;;;;;;;;;;;x
+d_miryang;Miryang;;;;;;;;;;;;;x
+d_miryang_adj;Miryang;;;;;;;;;;;;;x
+d_tsushima;Tsushima;;;;;;;;;;;;;x
+d_tsushima_adj;Tsushiman;;;;;;;;;;;;;x
+d_goryrong;Goryeong;;;;;;;;;;;;;x
+d_goryrong_adj;Goryeong;;;;;;;;;;;;;x
+d_gaya;Gaya;;;;;;;;;;;;;x
+d_gaya_adj;Gaya;;;;;;;;;;;;;x
+d_namwon;Namwon;;;;;;;;;;;;;x
+d_namwon_adj;Namwon;;;;;;;;;;;;;x
+d_gangjin;Gangjin;;;;;;;;;;;;;x
+d_gangjin_adj;Gangjin;;;;;;;;;;;;;x
+d_jindo;Jindo;;;;;;;;;;;;;x
+d_jindo_adj;Jindo;;;;;;;;;;;;;x
+d_geoje;Geoje;;;;;;;;;;;;;x
+d_geoje_adj;Geoje;;;;;;;;;;;;;x
+d_jeongeup;Jeong'eup;;;;;;;;;;;;;x
+d_jeongeup_adj;Jeong'eup;;;;;;;;;;;;;x
+d_samanguem;Saemangeum;;;;;;;;;;;;;x
+d_samanguem_adj;Saemangeum;;;;;;;;;;;;;x
+d_gunsan;Gunsan;;;;;;;;;;;;;x
+d_gunsan_adj;Gunsan;;;;;;;;;;;;;x
+d_muju;Muju;;;;;;;;;;;;;x
+d_muju_adj;Muju;;;;;;;;;;;;;x
+d_nonsan;Nonsan;;;;;;;;;;;;;x
+d_nonsan_adj;Nonsan;;;;;;;;;;;;;x
+d_daejeon;Daejeon;;;;;;;;;;;;;x
+d_daejeon_adj;Daejeon;;;;;;;;;;;;;x
+d_yeongdeok;Yeongdok;;;;;;;;;;;;;x
+d_yeongdeok_adj;Yeongdok;;;;;;;;;;;;;x
+d_boryeong;Boryeong;;;;;;;;;;;;;x
+d_boryeong_adj;Boryeong;;;;;;;;;;;;;x
+d_gongju;Gongju;;;;;;;;;;;;;x
+d_gongju_adj;Gongju;;;;;;;;;;;;;x
+d_seosan;Seosan;;;;;;;;;;;;;x
+d_seosan_adj;Seosan;;;;;;;;;;;;;x
+d_hongseong;Hongseong;;;;;;;;;;;;;x
+d_hongseong_adj;Hongseong;;;;;;;;;;;;;x
+d_donghae;Donghae;;;;;;;;;;;;;x
+d_donghae_adj;Donghae;;;;;;;;;;;;;x
+d_icheon;Icheon;;;;;;;;;;;;;x
+d_icheon_adj;Icheon;;;;;;;;;;;;;x
+d_gangneung;Gangneung;;;;;;;;;;;;;x
+d_gangneung_adj;Gangneung;;;;;;;;;;;;;x
+d_chuncheon;Chuncheon;;;;;;;;;;;;;x
+d_chuncheon_adj;Chuncheon;;;;;;;;;;;;;x
+d_east_wonju;East Wonju;;;;;;;;;;;;;x
+d_east_wonju_adj;East Wonju;;;;;;;;;;;;;x
+d_chuncheon;South Chuncheon;;;;;;;;;;;;;x
+d_chuncheon_adj;South Chuncheon;;;;;;;;;;;;;x
+d_west_wonju;West Wonju;;;;;;;;;;;;;x
+d_west_wonju_adj;West Wonju;;;;;;;;;;;;;x
+d_suwon;Suwon;;;;;;;;;;;;;x
+d_suwon_adj;Suwon;;;;;;;;;;;;;x
+d_ansan;Ansan;;;;;;;;;;;;;x
+d_ansan_adj;Ansan;;;;;;;;;;;;;x
+d_seongnam;Seongnam;;;;;;;;;;;;;x
+d_seongnam_adj;Seongnam;;;;;;;;;;;;;x
+d_namyangju;Namyangju;;;;;;;;;;;;;x
+d_namyangju_adj;Namyangju;;;;;;;;;;;;;x
+d_uijeongbu;Uijeongbu;;;;;;;;;;;;;x
+d_uijeongbu_adj;Uijeongbu;;;;;;;;;;;;;x
+d_kaesong;Kaesong;;;;;;;;;;;;;x
+d_kaesong_adj;Kaesong;;;;;;;;;;;;;x
+d_pocheon;Pocheon;;;;;;;;;;;;;x
+d_pocheon_adj;Pocheon;;;;;;;;;;;;;x
+d_ulleung;Ulleung;;;;;;;;;;;;;x
+d_ulleung_adj;Ulleung;;;;;;;;;;;;;x
+d_yantai;Yantai;;;;;;;;;;;;;x
+d_yantai_adj;Yantai;;;;;;;;;;;;;x
+d_weihai;Weihai;;;;;;;;;;;;;x
+d_weihai_adj;Weihai;;;;;;;;;;;;;x
+d_tsingdao;Tsingtao;;;;;;;;;;;;;x
+d_tsingdao_adj;Tsingtao;;;;;;;;;;;;;x
+d_fengtian;Fengtian;;;;;;;;;;;;;x
+d_fengtian_adj;Fengtian;;;;;;;;;;;;;x
