--- a/Falen/localisation/duchy_titles.csv
+++ b/Falen/localisation/duchy_titles.csv
@@ -94,8 +94,8 @@ d_geoje;Geoje;;;;;;;;;;;;;x
 d_geoje_adj;Geoje;;;;;;;;;;;;;x
 d_jeongeup;Jeong'eup;;;;;;;;;;;;;x
 d_jeongeup_adj;Jeong'eup;;;;;;;;;;;;;x
-d_samanguem;Saemangeum;;;;;;;;;;;;;x
-d_samanguem_adj;Saemangeum;;;;;;;;;;;;;x
+d_samangeum;Saemangeum;;;;;;;;;;;;;x
+d_samangeum_adj;Saemangeum;;;;;;;;;;;;;x
 d_gunsan;Gunsan;;;;;;;;;;;;;x
 d_gunsan_adj;Gunsan;;;;;;;;;;;;;x
 d_muju;Muju;;;;;;;;;;;;;x
