--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -94,8 +94,8 @@ d_geoje;p¨»;;;;;;;;;;;;;x
 d_geoje_adj;p¨»;;;;;;;;;;;;;x
 d_jeongeup;»M«;;;;;;;;;;;;;x
 d_jeongeup_adj;»M«;;;;;;;;;;;;;x
-d_samanguem;»¿ÃπÆ;;;;;;;;;;;;;x
-d_samanguem_adj;»¿ÃπÆ;;;;;;;;;;;;;x
+d_samangeum;»¿ÃπÆ;;;;;;;;;;;;;x
+d_samangeum_adj;»¿ÃπÆ;;;;;;;;;;;;;x
 d_gunsan;p≠∞¿;;;;;;;;;;;;;x
 d_gunsan_adj;p≠∞¿;;;;;;;;;;;;;x
 d_muju;4ª¸»;;;;;;;;;;;;;x
@@ -150,3 +150,5 @@ d_weihai;Ë∆t«X’t«;;;;;;;;;;;;;x
 d_weihai_adj;Ë∆t«X’t«;;;;;;;;;;;;;x
 d_tsingdao;mŒ‰≤3∆;;;;;;;;;;;;;x
 d_tsingdao_adj;mŒ‰≤3∆;;;;;;;;;;;;;x
+d_fengtian;	¥úÃ;;;;;;;;;;;;;x
+d_fengtian_adj;	¥úÃ;;;;;;;;;;;;;x
