--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -428,13 +428,13 @@ PROV427;¬ê«,“;;;;;;;;;;;;;x
 PROV428;”‡œ;;;;;;;;;;;;;x
 PROV429;âŒQ’;;;;;;;;;;;;;x
 PROV430;‡¬¸ª;;;;;;;;;;;;;x
-PROV431;»’t«∞¿;;;;;;;;;;;;;x
-PROV432;†ºt«»;;;;;;;;;;;;;x
-PROV433;t«;;;;;;;;;;;;;x
+PROV431;ê«Ë∏‹¥;;;;;;;;;;;;;x
+PROV432;D≈tπ 8÷tπkŒ;;;;;;;;;;;;;x
+PROV433;î∆¡ i÷4ª¿…;;;;;;;;;;;;;x
 PROV434;¿–t«»’;;;;;;;;;;;;;x
 PROV435;¡πX’t«;;;;;;;;;;;;;x
-PROV436;x‘‡¬;;;;;;;;;;;;;x
-PROV437;•«∞∆;;;;;;;;;;;;;x
+PROV436;Å¥k’∞¿;;;;;;;;;;;;;x
+PROV437;å¡1º∞¿Âπ;;;;;;;;;;;;;x
 PROV438;D∏∞¿;;;;;;;;;;;;;x
 PROV439;¬t«…;;;;;;;;;;;;;x
 PROV440;/»=Ã;;;;;;;;;;;;;x
@@ -479,7 +479,7 @@ PROV478;Ã¡¥∑3∆;;;;;;;;;;;;;x
 PROV479;=Ã¡π;;;;;;;;;;;;;x
 PROV480;ò∞t«Ãπ;;;;;;;;;;;;;x
 PROV481;ƒ÷∏;;;;;;;;;;;;;x
-PROV482;A“¥∑3∆;;;;;;;;;;;;;x
+PROV482;å¡1º∞¿Âπ;;;;;;;;;;;;;x
 PROV483;tŒt«Ë∏;;;;;;;;;;;;;x
 PROV484;8÷tπkŒ;;;;;;;;;;;;;x
 PROV485;Å¥8÷tπkŒ;;;;;;;;;;;;;x
@@ -544,7 +544,7 @@ PROV586;Ñ«ƒ…¨;;;;;;;;;;;;;x
 PROV587;i÷‰≤3∆;;;;;;;;;;;;;x
 PROV588;¨3∆¯ª;;;;;;;;;;;;;x
 PROV589;|∑t«»∞∆;;;;;;;;;;;;;x
-PROV590;ê«3∆»∞∆;;;;;;;;;;;;;x
+PROV590;O∆è¥;;;;;;;;;;;;;x
 PROV591;/»Q’;;;;;;;;;;;;;x
 PROV592;¥∑3∆…;;;;;;;;;;;;;x
 PROV593;ú∞D”3∆;;;;;;;;;;;;;x
