종교 아이콘

--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -1,6 +1,9 @@
 mu_pagan;4»Á;;;;;;;;;;;;;x
-jeju_pagan;¬ä­P­;;;;;;;;;;;;;x
+mu_pagan_reformed;4»P­;;;;;;;;;;;;;x
+jeju_pagan;XÕt¹)¼P­;;;;;;;;;;;;;x
+jeju_pagan_reformed;XÕt¹)¼P­;;;;;;;;;;;;;x
 steel_pagan;ÜĞ ÌP­;;;;;;;;;;;;;x
+steel_pagan_reformed;ÜĞ ÌP­;;;;;;;;;;;;;x
 red_solar_pagan;‰´OÇ ÜĞ‘Å;;;;;;;;;;;;;x
 red_solar_pagan_reformed;‰´OÇ ÜĞ‘Å;;;;;;;;;;;;;x
 cheondo;œÌÄ³P­;;;;;;;;;;;;;x
@@ -25,6 +28,6 @@ imperial;Èm­m­P­ŒÖ;;;;;;;;;;;;;x
 wanyan;DÆHÅ(Å -Â0¼;;;;;;;;;;;;;x
 aisin_gioro;`ÅàÂ¬|·(Å -Â0¼;;;;;;;;;;;;;x
 nightglow;|Å…ºÄ³;;;;;;;;;;;;;x
-unitary;µÑ|ÇP­;;;;;;;;;;;;;x
-familiar;¬À‘·¬ÈiÕ|ÇP­ŒÖ;;;;;;;;;;;;;x
+unitary;iÕ|ÇP­;;;;;;;;;;;;;x
+familiar;¬À‘·¬ÈP­ŒÖ;;;;;;;;;;;;;x
 c8_religion;(Å¼;;;;;;;;;;;;;x
