--- a/Falen_Multibyte/localisation/fal_governments.csv
+++ b/Falen_Multibyte/localisation/fal_governments.csv
@@ -12,3 +12,7 @@ republic_government;õ¬TÖÈ;;;;;;;;;;;;;x
 merchant_republic_government;ÁÀxÇ õ¬TÖÈ;;;;;;;;;;;;;x
 secular_republic_government;8ÁÁ õ¬TÖÈ;;;;;;;;;;;;;x
 nomadic_government;/Ç©ºü»;;;;;;;;;;;;;x
+military_government;p­È;;;;;;;;;;;;;x
+military_government_desc;p­È;;;;;;;;;;;;;x
+marxist_government;È¹t¹lĞ³ÂüÈXÇ È´;;;;;;;;;;;;;x
+marxist_government_desc;È¹t¹lĞ³ÂüÈXÇ È´;;;;;;;;;;;;;x
