--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -152,3 +152,37 @@ d_tsingdao;mŒ‰≤3∆;;;;;;;;;;;;;x
 d_tsingdao_adj;mŒ‰≤3∆;;;;;;;;;;;;;x
 d_fengtian;	¥úÃ;;;;;;;;;;;;;x
 d_fengtian_adj;	¥úÃ;;;;;;;;;;;;;x
+d_veteran_marines_company;t’—º≥;;;;;;;;;;;;;x
+d_veteran_marines_company_adj;t’—º≥;;;;;;;;;;;;;x
+d_gaston_company;¨≥¬µ— ©∆—ºË≤;;;;;;;;;;;;;x
+d_gaston_company_adj;¨≥¬µ— ©∆—ºË≤;;;;;;;;;;;;;x
+d_bobusang_company;Ùºè¥¡¿ ©∆—ºË≤;;;;;;;;;;;;;x
+d_bobusang_company_adj;Ùºè¥¡¿ ©∆—ºË≤;;;;;;;;;;;;;x
+d_bobusang_mokpo_company;»m≠Ùºè¥¡¿÷å÷ ©∫Ï”¿…è¥;;;;;;;;;;;;;x
+d_bobusang_mokpo_company_adj;»m≠Ùºè¥¡¿÷å÷ ©∫Ï”¿…è¥;;;;;;;;;;;;;x
+d_bobusang_sunchang_company;»m≠Ùºè¥¡¿÷å÷ ¬=Ã¿…è¥;;;;;;;;;;;;;x
+d_bobusang_sunchang_company_adj;»m≠Ùºè¥¡¿÷å÷ ¬=Ã¿…è¥;;;;;;;;;;;;;x
+d_bobusang_daejeon_company;»m≠Ùºè¥¡¿÷å÷ ≥»¿…è¥;;;;;;;;;;;;;x
+d_bobusang_daejeon_company_adj;»m≠Ùºè¥¡¿÷å÷ ≥»¿…è¥;;;;;;;;;;;;;x
+d_bobusang_andong_company;»m≠Ùºè¥¡¿÷å÷ H≈Ÿ≥¿…è¥;;;;;;;;;;;;;x
+d_bobusang_andong_company_adj;»m≠Ùºè¥¡¿÷å÷ H≈Ÿ≥¿…è¥;;;;;;;;;;;;;x
+d_bobusang_busan_company;»m≠Ùºè¥¡¿÷å÷ è¥∞¿¿…è¥;;;;;;;;;;;;;x
+d_bobusang_busan_company_adj;»m≠Ùºè¥¡¿÷å÷ è¥∞¿¿…è¥;;;;;;;;;;;;;x
+d_bobusang_gangneung_company;»m≠Ùºè¥¡¿÷å÷ ¨âπ¿…è¥;;;;;;;;;;;;;x
+d_bobusang_gangneung_company_adj;»m≠Ùºè¥¡¿÷å÷ ¨âπ¿…è¥;;;;;;;;;;;;;x
+d_bobusang_suwon_company;»m≠Ùºè¥¡¿÷å÷ ¬–∆¿…è¥;;;;;;;;;;;;;x
+d_bobusang_suwon_company_adj;»m≠Ùºè¥¡¿÷å÷ ¬–∆¿…è¥;;;;;;;;;;;;;x
+d_bobusang_seoul_company;»m≠Ùºè¥¡¿÷å÷ ¡∏∆¿…è¥;;;;;;;;;;;;;x
+d_bobusang_seoul_company_adj;»m≠Ùºè¥¡¿÷å÷ ¡∏∆¿…è¥;;;;;;;;;;;;;x
+d_bobusang_haeju_company;»m≠Ùºè¥¡¿÷å÷ t’¸»¿…è¥;;;;;;;;;;;;;x
+d_bobusang_haeju_company_adj;»m≠Ùºè¥¡¿÷å÷ t’¸»¿…è¥;;;;;;;;;;;;;x
+d_bobusang_rajin_company;»m≠Ùºè¥¡¿÷å÷ |∑ƒ…¿…è¥;;;;;;;;;;;;;x
+d_bobusang_rajin_company_adj;»m≠Ùºè¥¡¿÷å÷ |∑ƒ…¿…è¥;;;;;;;;;;;;;x
+d_bobusang_hamheung_company;»m≠Ùºè¥¡¿÷å÷ h’e◊¿…è¥;;;;;;;;;;;;;x
+d_bobusang_hamheung_company_adj;»m≠Ùºè¥¡¿÷å÷ h’e◊¿…è¥;;;;;;;;;;;;;x
+d_bobusang_pyongyang_company;»m≠Ùºè¥¡¿÷å÷ …”ë≈¿…è¥;;;;;;;;;;;;;x
+d_bobusang_pyongyang_company_adj;»m≠Ùºè¥¡¿÷å÷ …”ë≈¿…è¥;;;;;;;;;;;;;x
+d_bobusang_uiju_company;»m≠Ùºè¥¡¿÷å÷ X«¸»¿…è¥;;;;;;;;;;;;;x
+d_bobusang_uiju_company_adj;»m≠Ùºè¥¡¿÷å÷ X«¸»¿…è¥;;;;;;;;;;;;;x
+d_sixth_corps_company;6p≠Ë≤;;;;;;;;;;;;;x
+d_sixth_corps_company_adj;6p≠Ë≤;;;;;;;;;;;;;x
