--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -513,6 +513,7 @@ PROV512;Tsushima;;;;;;;;;;;;;x
 PROV513;Xingcheng;;;;;;;;;;;;;x
 PROV514;Shenyang;;;;;;;;;;;;;x
 PROV515;Changhai;;;;;;;;;;;;;x
+PROV558;Gyeolseong;;;;;;;;;;;;;x
 PROV559;Geomundo;;;;;;;;;;;;;x
 PROV560;Pungsan;;;;;;;;;;;;;x
 PROV561;Ye'an;;;;;;;;;;;;;x
