--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -513,6 +513,7 @@ PROV512;ƒ‹¬»π;;;;;;;;;;;;;x
 PROV513;Ò¬≠Ã;;;;;;;;;;;;;x
 PROV514;/¡ë≈;;;;;;;;;;;;;x
 PROV515;=ÃX’t«;;;;;;;;;;;;;x
+PROV558;∞¨1¡;;;;;;;;;;;;;x
 PROV559;p¨8ªƒ≥;;;;;;;;;;;;;x
 PROV560;ç‘∞¿;;;;;;;;;;;;;x
 PROV561;∆H≈;;;;;;;;;;;;;x
