--- a/Falen/localisation/duchy_titles.csv
+++ b/Falen/localisation/duchy_titles.csv
@@ -162,3 +162,5 @@ d_tsingdao;Tsingtao;;;;;;;;;;;;;x
 d_tsingdao_adj;Tsingtao;;;;;;;;;;;;;x
 d_fengtian;Fengtian;;;;;;;;;;;;;x
 d_fengtian_adj;Fengtian;;;;;;;;;;;;;x
+d_kharchin;Kharchin;;;;;;;;;;;;;x
+d_kharchin_adj;Kharchin;;;;;;;;;;;;;x
