--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -423,7 +423,7 @@ PROV422;Cingyuwan;;;;;;;;;;;;;x
 PROV423;Changtu;;;;;;;;;;;;;x
 PROV424;Xifeng;;;;;;;;;;;;;x
 PROV425;Kaiyuan;;;;;;;;;;;;;x
-PROV426;Liaozhong;;;;;;;;;;;;;x
+PROV426;Manduhu;;;;;;;;;;;;;x
 PROV427;Sujiatu;;;;;;;;;;;;;x
 PROV428;Faku;;;;;;;;;;;;;x
 PROV429;Kangping;;;;;;;;;;;;;x
