--- a/Falen_Multibyte/localisation/faltitles.csv
+++ b/Falen_Multibyte/localisation/faltitles.csv
@@ -15,5 +15,7 @@ e_donghae_adj;Ÿ≥t’ »m≠;;;;;;;;;;;;;x
 e_donghae_adj;Ÿ≥t’;;;;;;;;;;;;;x
 e_goryeo;‡¨3∏;;;;;;;;;;;;;x
 e_goryeo_adj;‡¨3∏;;;;;;;;;;;;;x
+e_tumed;,“T∫‹¥;;;;;;;;;;;;;x
+e_tumed_adj;,“T∫‹¥;;;;;;;;;;;;;x
 c_seoul;¡∏∆;;;;;;;;;;;;;x
 c_seoul_adj;¡∏∆;;;;;;;;;;;;;x
