--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -423,7 +423,7 @@ PROV422;mŒ«D∆;;;;;;;;;;;;;x
 PROV423;=Ã,“;;;;;;;;;;;;;x
 PROV424;‹¬ë”;;;;;;;;;;;;;x
 PROV425;tŒt««H≈;;;;;;;;;;;;;x
-PROV426;î∆…;;;;;;;;;;;;;x
+PROV426;ÃπP¥ƒ÷;;;;;;;;;;;;;x
 PROV427;¬ê«,“;;;;;;;;;;;;;x
 PROV428;”‡œ;;;;;;;;;;;;;x
 PROV429;âŒQ’;;;;;;;;;;;;;x
