--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -6,6 +6,14 @@ d_dongdaemun;Ù³³8»;;;;;;;;;;;;;x
 d_dongdaemun_adj;Ù³³8»;;;;;;;;;;;;;x
 d_seodaemun;Á³8»;;;;;;;;;;;;;x
 d_seodaemun_adj;Á³8»;;;;;;;;;;;;;x
+d_mapo;È¹ìÓ;;;;;;;;;;;;;x
+d_mapo_adj;È¹ìÓ;;;;;;;;;;;;;x
+d_yeongdeungpo;Æñ´ìÓ;;;;;;;;;;;;;x
+d_yeongdeungpo_adj;Æñ´ìÓ;;;;;;;;;;;;;x
+d_anyang;HÅ‘Å;;;;;;;;;;;;;x
+d_anyang_adj;HÅ‘Å;;;;;;;;;;;;;x
+d_ganghwa;¬TÖ;;;;;;;;;;;;;x
+d_ganghwa_adj;¬TÖ;;;;;;;;;;;;;x
 d_gaema;¬È¹;;;;;;;;;;;;;x
 d_gaema;¬È¹;;;;;;;;;;;;;x
 d_pyongyang;ÉÓ‘Å;;;;;;;;;;;;;x
@@ -52,10 +60,76 @@ d_gwangju;­üÈ;;;;;;;;;;;;;x
 d_gwangju_adj;­üÈ;;;;;;;;;;;;;x
 d_paektu_guard;1¼P´ kÎÇ³;;;;;;;;;;;;;x
 d_paektu_guard_adj;kÎÇ³;;;;;;;;;;;;;x
-d_unitary;µÑ|ÇP­ŒÖ;;;;;;;;;;;;;x
-d_unitary_adj;µÑ|ÇP­;;;;;;;;;;;;;x
+d_unitary;iÕ|ÇP­ŒÖ;;;;;;;;;;;;;x
+d_unitary_adj;iÕ|ÇP­;;;;;;;;;;;;;x
 d_kumchon;®œÌ;;;;;;;;;;;;;x
 d_kumchon_adj;®œÌ;;;;;;;;;;;;;x
+d_uiju;XÇüÈ;;;;;;;;;;;;;x
+d_uiju_adj;XÇüÈ;;;;;;;;;;;;;x
+d_gusong;l­1Á;;;;;;;;;;;;;x
+d_gusong_adj;l­1Á;;;;;;;;;;;;;x
+d_dongrim;Ù³¼¹;;;;;;;;;;;;;x
+d_dongrim_adj;Ù³¼¹;;;;;;;;;;;;;x
+d_jongju;ÈüÈ;;;;;;;;;;;;;x
+d_jongju_adj;ÈüÈ;;;;;;;;;;;;;x
+d_yongbyon;U±À¼;;;;;;;;;;;;;x
+d_yongbyon_adj;U±À¼;;;;;;;;;;;;;x
+d_huichon;l×œÌ;;;;;;;;;;;;;x
+d_huichon_adj;l×œÌ;;;;;;;;;;;;;x
+d_ganggye;¬Ä¬;;;;;;;;;;;;;x
+d_ganggye_adj;¬Ä¬;;;;;;;;;;;;;x
+d_jasong;Ç1Á;;;;;;;;;;;;;x
+d_jasong_adj;Ç1Á;;;;;;;;;;;;;x
+d_anju;HÅüÈ;;;;;;;;;;;;;x
+d_anju_adj;HÅüÈ;;;;;;;;;;;;;x
+d_sunchon;ÂœÌ;;;;;;;;;;;;;x
+d_sunchon_adj;ÂœÌ;;;;;;;;;;;;;x
+d_nampo;¨°ìÓ;;;;;;;;;;;;;x
+d_nampo_adj;¨°ìÓ;;;;;;;;;;;;;x
+d_songcheon;¡ÁœÌ;;;;;;;;;;;;;x
+d_songcheon_adj;¡ÁœÌ;;;;;;;;;;;;;x
+d_maengsan;ù¹°À;;;;;;;;;;;;;x
+d_maengsan_adj;ù¹°À;;;;;;;;;;;;;x
+d_baekdu;1¼P´;;;;;;;;;;;;;x
+d_baekdu_adj;1¼P´;;;;;;;;;;;;;x
+d_hamhung;hÕe×;;;;;;;;;;;;;x
+d_hamhung_adj;hÕe×;;;;;;;;;;;;;x
+d_sinpo;àÂìÓ;;;;;;;;;;;;;x
+d_sinpo_adj;àÂìÓ;;;;;;;;;;;;;x
+d_kilju;8®üÈ;;;;;;;;;;;;;x
+d_kilju_adj;8®üÈ;;;;;;;;;;;;;x
+d_kyongsong;Ì¬1Á;;;;;;;;;;;;;x
+d_kyongsong_adj;Ì¬1Á;;;;;;;;;;;;;x
+d_chongjin;­ÌÄÉ;;;;;;;;;;;;;x
+d_chongjin_adj;­ÌÄÉ;;;;;;;;;;;;;x
+d_rajin;|·ÄÉ;;;;;;;;;;;;;x
+d_rajin_adj;|·ÄÉ;;;;;;;;;;;;;x
+d_wonsan;ĞÆ°À;;;;;;;;;;;;;x
+d_wonsan_adj;ĞÆ°À;;;;;;;;;;;;;x
+d_pyeonggang;ÉÓ¬;;;;;;;;;;;;;x
+d_pyeonggang_adj;ÉÓ¬;;;;;;;;;;;;;x
+d_keumgang;®¬;;;;;;;;;;;;;x
+d_keumgang_adj;®¬;;;;;;;;;;;;;x
+d_singye;àÂÄ¬;;;;;;;;;;;;;x
+d_singye_adj;àÂÄ¬;;;;;;;;;;;;;x
+d_hwangju;iÖüÈ;;;;;;;;;;;;;x
+d_hwangju_adj;iÖüÈ;;;;;;;;;;;;;x
+d_anak;HÅEÅ;;;;;;;;;;;;;x
+d_anak_adj;HÅEÅ;;;;;;;;;;;;;x
+d_gwail;ü¬|Ç;;;;;;;;;;;;;x
+d_gwail_adj;ü¬|Ç;;;;;;;;;;;;;x
+d_byeokseog;Ì¼1Á;;;;;;;;;;;;;x
+d_byeokeong_adj;Ì¼1Á;;;;;;;;;;;;;x
+d_haeju;tÕüÈ;;;;;;;;;;;;;x
+d_haeju_adj;tÕüÈ;;;;;;;;;;;;;x
+d_yanbian;ğÅÀ¼;;;;;;;;;;;;;x
+d_yanbian_adj;ğÅÀ¼;;;;;;;;;;;;;x
+d_heilongjiang;äÕtÇı¸¥Ç;;;;;;;;;;;;;x
+d_heilongjiang_adj;äÕtÇı¸¥Ç;;;;;;;;;;;;;x
+d_vladivostok;¾|·µô¼³Â ÑlĞ;;;;;;;;;;;;;x
+d_vladivostok_adj;¾|·µô¼³Â ÑlĞ;;;;;;;;;;;;;x
+d_ussuriysk;°ÆÂ¬¹³ÂlĞ;;;;;;;;;;;;;x
+d_ussuriysk_adj;°Æ³Â¬¹³ÂlĞ;;;;;;;;;;;;;x
 d_free_honam;Ç/Ç 8Ö¨°m­;;;;;;;;;;;;;x
 d_free_honam_adj;Ç/Ç8Ö¨°;;;;;;;;;;;;;x
 d_republic_haenam;tÕ¨° xÇü» õ¬TÖm­;;;;;;;;;;;;;x
@@ -94,8 +168,8 @@ d_geoje;p¬È;;;;;;;;;;;;;x
 d_geoje_adj;p¬È;;;;;;;;;;;;;x
 d_jeongeup;ÈMÇ;;;;;;;;;;;;;x
 d_jeongeup_adj;ÈMÇ;;;;;;;;;;;;;x
-d_samangeum;ÈÀÌ¹®;;;;;;;;;;;;;x
-d_samangeum_adj;ÈÀÌ¹®;;;;;;;;;;;;;x
+d_saemangeum;ÈÀÌ¹®;;;;;;;;;;;;;x
+d_saemangeum_adj;ÈÀÌ¹®;;;;;;;;;;;;;x
 d_gunsan;p­°À;;;;;;;;;;;;;x
 d_gunsan_adj;p­°À;;;;;;;;;;;;;x
 d_muju;4»üÈ;;;;;;;;;;;;;x
@@ -122,12 +196,24 @@ d_gangneung;¬‰¹;;;;;;;;;;;;;x
 d_gangneung_adj;¬‰¹;;;;;;;;;;;;;x
 d_chuncheon;˜ÍœÌ;;;;;;;;;;;;;x
 d_chuncheon_adj;˜ÍœÌ;;;;;;;;;;;;;x
+d_south_chuncheon;¨°˜ÍœÌ;;;;;;;;;;;;;x
+d_south_chuncheon_adj;¨°˜ÍœÌ;;;;;;;;;;;;;x
 d_east_wonju;Ù³ĞÆüÈ;;;;;;;;;;;;;x
 d_east_wonju_adj;Ù³ĞÆüÈ;;;;;;;;;;;;;x
 d_chuncheon;¨°˜ÍœÌ;;;;;;;;;;;;;x
 d_chuncheon_adj;¨°˜ÍœÌ;;;;;;;;;;;;;x
 d_west_wonju;ÁĞÆüÈ;;;;;;;;;;;;;x
 d_west_wonju_adj;ÁĞÆüÈ;;;;;;;;;;;;;x
+d_buyeo;´ìÅ;;;;;;;;;;;;;x
+d_buyeo_adj;´ìÅ;;;;;;;;;;;;;x
+d_iksan;uÇ°À;;;;;;;;;;;;;x
+d_iksan_adj;uÇ°À;;;;;;;;;;;;;x
+d_cheonan;œÌHÅ;;;;;;;;;;;;;x
+d_cheonan_adj;œÌHÅ;;;;;;;;;;;;;x
+d_jinju;ÄÉüÈ;;;;;;;;;;;;;x
+d_jinju_adj;ÄÉüÈ;;;;;;;;;;;;;x
+d_pyeongtaek;ÉÓİĞ;;;;;;;;;;;;;x
+d_pyeongtaek_adj;ÉÓİĞ;;;;;;;;;;;;;x
 d_suwon;ÂĞÆ;;;;;;;;;;;;;x
 d_suwon_adj;ÂĞÆ;;;;;;;;;;;;;x
 d_ansan;HÅ°À;;;;;;;;;;;;;x
@@ -152,6 +238,32 @@ d_tsingdao;mÎä²3Æ;;;;;;;;;;;;;x
 d_tsingdao_adj;mÎä²3Æ;;;;;;;;;;;;;x
 d_fengtian;	´œÌ;;;;;;;;;;;;;x
 d_fengtian_adj;	´œÌ;;;;;;;;;;;;;x
+d_dalian;ä²D¸;;;;;;;;;;;;;x
+d_dalian_adj;ä²D¸;;;;;;;;;;;;;x
+d_yingkou;‰ÇäÎ°Æ;;;;;;;;;;;;;x
+d_yingkou_adj;‰ÇäÎ°Æ;;;;;;;;;;;;;x
+d_liaoyang;´·3Æ‘Å;;;;;;;;;;;;;x
+d_liaoyang_adj;´·3Æ‘Å;;;;;;;;;;;;;x
+d_dandong;è²e´;;;;;;;;;;;;;x
+d_dandong_adj;è²e´;;;;;;;;;;;;;x
+d_tieling;„ÑÁ¹;;;;;;;;;;;;;x
+d_tieling_adj;ğÒĞÅÁ¹;;;;;;;;;;;;;x
+d_chifing;ğÄQÕ;;;;;;;;;;;;;x
+d_chifing_adj;ğÄQÕ;;;;;;;;;;;;;
+d_tonghua;AÒTÖ;;;;;;;;;;;;;x
+d_tonghua_adj;AÒTÖ;;;;;;;;;;;;;x
+d_khorchin;TÏkÎ;;;;;;;;;;;;;x
+d_khorchin_adj;TÏkÎ;;;;;;;;;;;;;x
+d_panjin;ÓÄÉ;;;;;;;;;;;;;x
+d_panjin_adj;ÓÄÉ;;;;;;;;;;;;;x
+d_jinzhou;ÄÉÈ°Æ;;;;;;;;;;;;;x
+d_jinzhou_adj;ÄÉÈ°Æ;;;;;;;;;;;;;x
+d_hurudao;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
+d_hurudao_adj;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
+d_chaoyang;(Ì3Æ‘Å;;;;;;;;;;;;;x
+d_chaoyang_adj;(Ì3Æ‘Å;;;;;;;;;;;;;x
+d_jilin;ÀÉ°¹;;;;;;;;;;;;;x
+d_jilin_adj;ÀÉ°¹;;;;;;;;;;;;;x
 d_veteran_marines_company;tÕÑ¼³;;;;;;;;;;;;;x
 d_veteran_marines_company_adj;tÕÑ¼³;;;;;;;;;;;;;x
 d_gaston_company;¬³ÂµÑ ©ÆÑ¼è²;;;;;;;;;;;;;x
@@ -186,3 +298,5 @@ d_bobusang_uiju_company;Èm­ô¼´ÁÀÖŒÖ XÇüÈÀÉ´;;;;;;;;;;;;;x
 d_bobusang_uiju_company_adj;Èm­ô¼´ÁÀÖŒÖ XÇüÈÀÉ´;;;;;;;;;;;;;x
 d_sixth_corps_company;6p­è²;;;;;;;;;;;;;x
 d_sixth_corps_company_adj;6p­è²;;;;;;;;;;;;;x
+d_kharchin;XÕt¹kÎ;;;;;;;;;;;;;x
+d_kharchin_adj;XÕt¹kÎ;;;;;;;;;;;;;x
