--- a/Falen/localisation/province_names.csv
+++ b/Falen/localisation/province_names.csv
@@ -212,7 +212,7 @@ PROV211;Donghae;;;;;;;;;;;;;x
 PROV212;Gangneung;;;;;;;;;;;;;x
 PROV213;Yangyang;;;;;;;;;;;;;x
 PROV214;Sokcho;;;;;;;;;;;;;x
-PROV215;Ganseong;;;;;;;;;;;;;x
+PROV215;Goseong;;;;;;;;;;;;;x
 PROV216;Kimhwa;;;;;;;;;;;;;x
 PROV217;Changdo;;;;;;;;;;;;;x
 PROV218;Kumgang;;;;;;;;;;;;;x
@@ -241,7 +241,7 @@ PROV240;Kangryong;;;;;;;;;;;;;x
 PROV241;Ongjin;;;;;;;;;;;;;x
 PROV242;Thaethan;;;;;;;;;;;;;x
 PROV243;Jangyon;;;;;;;;;;;;;x
-PROV244;Kwail;;;;;;;;;;;;;x
+PROV244;Phungchon;;;;;;;;;;;;;x
 PROV245;Songhwa;;;;;;;;;;;;;x
 PROV246;Samchon;;;;;;;;;;;;;x
 PROV247;Unryul;;;;;;;;;;;;;x
