--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -154,8 +154,8 @@ d_miryang;¼‘Å;;;;;;;;;;;;;x
 d_miryang_adj;¼‘Å;;;;;;;;;;;;;x
 d_tsushima;ðÄÜÂÈ¹;;;;;;;;;;;;;x
 d_tsushima_adj;ðÄÜÂÈ¹;;;;;;;;;;;;;x
-d_goryrong;à¬9¸;;;;;;;;;;;;;x
-d_goryrong_adj;à¬9¸;;;;;;;;;;;;;x
+d_goryeong;à¬9¸;;;;;;;;;;;;;x
+d_goryeong_adj;à¬9¸;;;;;;;;;;;;;x
 d_gaya;¬|Å;;;;;;;;;;;;;x
 d_gaya_adj;¬|Å;;;;;;;;;;;;;x
 d_namwon;¨°ÐÆ;;;;;;;;;;;;;x
@@ -300,3 +300,5 @@ d_sixth_corps_company;6p­è²;;;;;;;;;;;;;x
 d_sixth_corps_company_adj;6p­è²;;;;;;;;;;;;;x
 d_kharchin;XÕt¹kÎ;;;;;;;;;;;;;x
 d_kharchin_adj;XÕt¹kÎ;;;;;;;;;;;;;x
+d_okcheon;%ÆœÌ;;;;;;;;;;;;;x
+d_okcheon_adj;%ÆœÌ;;;;;;;;;;;;;x
