--- a/Falen_Multibyte/localisation/fal_cultures.csv
+++ b/Falen_Multibyte/localisation/fal_cultures.csv
@@ -36,3 +36,5 @@ southwest_group;Á¨°;;;;;;;;;;;;;x
 southeast_group;Ù³¨°;;;;;;;;;;;;;x
 kwanso_group;­Á;;;;;;;;;;;;;x
 kwanbuk_group;­´;;;;;;;;;;;;;x
+japanese_group;|Çø¼xÇ;;;;;;;;;;;;;x
+kyushuan;Ü­ˆÂ;;;;;;;;;;;;;x
