--- a/Falen_Multibyte/localisation/fal_governments.csv
+++ b/Falen_Multibyte/localisation/fal_governments.csv
@@ -16,3 +16,11 @@ military_government;p­È;;;;;;;;;;;;;x
 military_government_desc;p­È;;;;;;;;;;;;;x
 marxist_government;È¹t¹lĞ³ÂüÈXÇ È´;;;;;;;;;;;;;x
 marxist_government_desc;È¹t¹lĞ³ÂüÈXÇ È´;;;;;;;;;;;;;x
+maritime_government;tÕ‘Å Èm­;;;;;;;;;;;;;x
+maritime_government_desc;tÕ‘Å Èm­;;;;;;;;;;;;;x
+confucian_clan_government;8»É ­Ì¸È;;;;;;;;;;;;;x
+confucian_clan_government_desc;/ÇP­ ­Ì¸È;;;;;;;;;;;;;x
+confucian_government;/ÇP­ ­Ì¸È;;;;;;;;;;;;;x
+confucian_government_desc;/ÇP­ ­Ì¸È;;;;;;;;;;;;;x
+confederation_government;ğÅiÕ´Ì;;;;;;;;;;;;;x
+confederation_government_desc;Á¸Æ ü»ÈOÇ ìÅì· ÀÉ0¼Çä´XÇ ğÅiÕ´Ì…ÇÈ²ä². ğÅiÕ´Ì È´”² 	´àÂXÇ Ñ¼%¸DÇ ÕÉÑÉXÕ”² ³àÂ ø­ä´ĞÅŒ¬ 8ÌÈDÇ ”Æ­Ì`Õ Â ˆÇµÂÈ²ä².;;;;;;;;;;;;;x
