--- a/Falen_Multibyte/localisation/fal_miscs.csv
+++ b/Falen_Multibyte/localisation/fal_miscs.csv
@@ -18,4 +18,5 @@ china_china;m­ü»È´;Chine;China;;China;;;;;;;;;x
 china_china_full;ÉTÖü»m­;;;;;;;;;;;;;x
 TXT_CHINA;ÉTÖü»m­;;;;;;;;;;x
 empire;m­ü»È´;;;;;;;;;;x
+custom_seoul;Á¸Æ Œ­íÅ;;;;;;;;;;x
 XT_3_desc;Current Imperial Authority : [Root.global_imperial_authority.GetValue]\n Monthly Authority Changes : [e_c8.Holder.authority_changes.GetValue];;;;;;;;;;x
