--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -27,6 +27,7 @@ populist;kÕm­P­ ³ÉüÈXÇ;;;;;;;;;;;;;x
 imperial;Èm­m­P­ŒÖ;;;;;;;;;;;;;x
 wanyan;DÆHÅ(Å -Â0¼;;;;;;;;;;;;;x
 aisin_gioro;`ÅàÂ¬|·(Å -Â0¼;;;;;;;;;;;;;x
+taoist;Ä³P­;;;;;;;;;;;;;x
 nightglow;|Å…ºÄ³;;;;;;;;;;;;;x
 unitary;iÕ|ÇP­;;;;;;;;;;;;;x
 familiar;¬À‘·¬ÈP­ŒÖ;;;;;;;;;;;;;x
