--- a/Falen_Multibyte/localisation/province_names.csv
+++ b/Falen_Multibyte/localisation/province_names.csv
@@ -212,7 +212,7 @@ PROV211;Ÿ≥t’;;;;;;;;;;;;;x
 PROV212;¨âπ;;;;;;;;;;;;;x
 PROV213;ë≈ë≈;;;;;;;;;;;;;x
 PROV214;ç¡Õ;;;;;;;;;;;;;x
-PROV215;¨1¡;;;;;;;;;;;;;x
+PROV215;‡¨1¡;;;;;;;;;;;;;x
 PROV216;OÆT÷;;;;;;;;;;;;;x
 PROV217;=Ãƒ≥;;;;;;;;;;;;;x
 PROV218;Æ¨;;;;;;;;;;;;;x
@@ -241,7 +241,7 @@ PROV240;¨9∏;;;;;;;;;;;;;x
 PROV241;9∆ƒ…;;;;;;;;;;;;;x
 PROV242;‹–ƒ–;;;;;;;;;;;;;x
 PROV243;•«≈;;;;;;;;;;;;;x
-PROV244;¸¨|«;;;;;;;;;;;;;x
+PROV244;ç‘úÃ;;;;;;;;;;;;;x
 PROV245;°¡T÷;;;;;;;;;;;;;x
 PROV246;º¿úÃ;;;;;;;;;;;;;x
 PROV247;O«`π;;;;;;;;;;;;;x
