멀티바이트홋퓍스

--- a/Falen_Multibyte/localisation/duchy_titles.csv
+++ b/Falen_Multibyte/localisation/duchy_titles.csv
@@ -252,14 +252,20 @@ d_chifing;ğÄQÕ;;;;;;;;;;;;;x
 d_chifing_adj;ğÄQÕ;;;;;;;;;;;;;
 d_tonghua;AÒTÖ;;;;;;;;;;;;;x
 d_tonghua_adj;AÒTÖ;;;;;;;;;;;;;x
-d_khorchin;TÏkÎ;;;;;;;;;;;;;x
-d_khorchin_adj;TÏkÎ;;;;;;;;;;;;;x
+d_khorchin;8Öt¹kÎ;;;;;;;;;;;;;x
+d_khorchin_adj;8Öt¹kÎ;;;;;;;;;;;;;x
+d_ju_ud;üÈ°ÆÜ´;;;;;;;;;;;;;x
+d_ju_ud_adj;üÈ°ÆÜ´;;;;;;;;;;;;;x
+d_chahar;(ÌXÕt¹;;;;;;;;;;;;;x
+d_chahar_adj;(ÌXÕt¹;;;;;;;;;;;;;x
+d_baishan;¼tÇ°À;;;;;;;;;;;;;x
+d_baishan_adj;¼tÇ°À;;;;;;;;;;;;;x
 d_panjin;ÓÄÉ;;;;;;;;;;;;;x
 d_panjin_adj;ÓÄÉ;;;;;;;;;;;;;x
 d_jinzhou;ÄÉÈ°Æ;;;;;;;;;;;;;x
 d_jinzhou_adj;ÄÉÈ°Æ;;;;;;;;;;;;;x
-d_hurudao;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
-d_hurudao_adj;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
+d_huludao;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
+d_huludao_adj;ÄÖè¸ä²3Æ;;;;;;;;;;;;;x
 d_chaoyang;(Ì3Æ‘Å;;;;;;;;;;;;;x
 d_chaoyang_adj;(Ì3Æ‘Å;;;;;;;;;;;;;x
 d_jilin;ÀÉ°¹;;;;;;;;;;;;;x
