북마크 다쓴레후

--- a/Falen_Multibyte/localisation/fal_religions.csv
+++ b/Falen_Multibyte/localisation/fal_religions.csv
@@ -32,3 +32,4 @@ nightglow;|Å…ºÄ³;;;;;;;;;;;;;x
 unitary;iÕ|ÇP­;;;;;;;;;;;;;x
 familiar;¬À‘·¬ÈP­ŒÖ;;;;;;;;;;;;;x
 c8_religion;(Å¼;;;;;;;;;;;;;x
+won_buddhist;ÐÆˆ´P­;;;;;;;;;;;;;x
